# CekirdekChat

./: .env.example  .gitignore  DEPLOY.md  DEPLOY_VERCEL.md  README.md  RUN_ON_THIS_PC.md  cekirdek.js  electron-main.js  electron-preload.js  package-lock.json  package.json  render.yaml  run-dev.bat  run-vercel-staging.bat  vercel.json
.github/ISSUE_TEMPLATE/: fixv0.md
.github/workflows/: eas-build.yml  gh-pages.yml  node.js.yml  npm-publish-github-packages.yml  signaling-docker.yml  vercel-deploy.yml
Cekirdek-P2P/: README.md
backend-python/: Dockerfile  requirements.txt  server.py  twisted_seeder.py
docs/: CPP_SERVER_README.md
frontend/: App.js  README.md  app.json  config  index  index.html  package-lock.json  package.json  pnpm-lock.yaml  stun-servers.json  webpack.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: cekirdek-app.tsx  chat-room.tsx  join-screen.tsx  logo-data.ts
frontend/hooks/: use-cekirdek-room.ts
frontend/lib/: encryption.ts  img.ts
frontend/public/: index.html  manifest.json  sw.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: AuthPanel.js  Button.js  CekirdekChat.js  ChatScreen.js  ReadyPanel.js
frontend_backup/: index.html
frontend_backup/src/: App.jsx  styles.css
mobile/: App.js  App.tsx  app.json  eas.json  package.json  store.js  tsconfig.json
native_bindings/: index.js
server_cpp/: CMakeLists.txt  signaling_server.cpp
signaling/: server.py
signaling_js/: Dockerfile  package.json  server.js  test_client.js
supabase/: cleanup_trigger.sql  schema.sql
(+5 files in other folders)
